.metadata/.plugins/org.eclipse.cdt.ui/BomberMan.build.log
00:22:40 **** Incremental Build of configuration Debug for project BomberMan ****
make -j8 all 
arm-none-eabi-gcc "../MyLib/icons.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/ILI9341 -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../MyLib -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"MyLib/icons.d" -MT"MyLib/icons.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "MyLib/icons.o"
arm-none-eabi-gcc "../MyLib/joystick.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/ILI9341 -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../MyLib -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"MyLib/joystick.d" -MT"MyLib/joystick.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "MyLib/joystick.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/ILI9341 -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I../MyLib -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../MyLib/joystick.c: In function 'drawPlayer':
../MyLib/joystick.c:56:9: error: 'playerIcon_1' undeclared (first use in this function); did you mean 'playerIcon1'?
   56 |         playerIcon_1.drawPoint = position;
      |         ^~~~~~~~~~~~
      |         playerIcon1
../MyLib/joystick.c:56:9: note: each undeclared identifier is reported only once for each function it appears in
make: *** [MyLib/subdir.mk:28: MyLib/joystick.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/main.c: In function 'drawStartScreen':
../Core/Src/main.c:88:28: error: 'playerIcon_1_32' undeclared (first use in this function); did you mean 'playerIcon3'?
   88 |         Image playerIcon = playerIcon_1_32;
      |                            ^~~~~~~~~~~~~~~
      |                            playerIcon3
../Core/Src/main.c:88:28: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:231:39: error: 'playerIcon_1_32' undeclared (first use in this function); did you mean 'playerIcon3'?
  231 |                         Image image = playerIcon_1_32;
      |                                       ^~~~~~~~~~~~~~~
      |                                       playerIcon3
make: *** [Core/Src/subdir.mk:58: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

00:22:41 Build Failed. 6 errors, 0 warnings. (took 1s.861ms)

